[Win] Compile errors in Document::updateTitleElement. https://bugs.webkit.org/show_bug.cgi?id=176381

Reviewed by Alex Christensen.

MSVC is not able to compile the statement:
'auto result = boolExpression ? lambda1 : lambda2;'
where 'lambda1' and 'lambda2' have the same signature.

* dom/Document.cpp:
(WebCore::findHTMLTitle):
(WebCore::isHTMLTitle):
(WebCore::isHTMLTitleEligible):
(WebCore::findSVGTitle):
(WebCore::isSVGTitle):
(WebCore::isSVGTitleEligible):
(WebCore::Document::updateTitleElement):


Canonical link: https://commits.webkit.org/193045@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@221684 268f45cc-cd09-0410-ab3c-d52691b4dbfc